<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="created_at">Created at %1$s</string>
    <string-array name="gender_spinner">
        <item>Select</item>
        <item>Female</item>
        <item>Male</item>
        <item>Others</item>
    </string-array>

</resources>