<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.myapplication.viewmodels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/formContainer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp">

            <!--NAME-->
            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@+id/emailInput"
                android:text="@={viewModel.newUserName}" />

            <TextView
                android:id="@+id/nameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.newUserNameError}"
                android:textColor="#F44336" />
            <!--\NAME-->

            <!--EMAIL-->
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/genderInput"
                android:text="@={viewModel.newUserEmail}" />

            <TextView
                android:id="@+id/emailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.newUserEmailError}"
                android:textColor="#F44336" />
            <!--\EMAIL-->

            <!--GENDER-->
            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/genderInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:entries="@array/gender_spinner"
                android:inputType="none" />

            <TextView
                android:id="@+id/genderError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.newUserGenderError}"
                android:textColor="#F44336" />
            <!--\GENDER-->

            <!--STATUS-->
            <TextView
                android:id="@+id/statusLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/statutsInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp" />

            <!--\STATUS-->

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.dataIsValid}"
                android:onClick="@{v -> viewModel.saveUser(v)}"
                android:text="@string/save" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>